unpackaged/main/default/objects/ZP_Payroll_Audit__c/ZP_Payroll_Audit__c.object-meta.xml
<CustomObject>
    <description>Staging table to receive CSV data from Amazon S3 via Workato</description>
    <label>ZP Payroll Audit</label>
    <nameField>
        <displayFormat>HIPA-{0000}</displayFormat>
        <label>ZP Payroll Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Payroll Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>