unpackaged/main/default/objects/ZP_Payroll_Audit__c/fields/Admin_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Admin_User_ID__c</fullName>
    <label>Admin User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>