unpackaged/main/default/objects/ZP_Payroll_Audit__c/fields/Business_E_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_E_File_Number__c</fullName>
    <label>Business E-File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>