unpackaged/main/default/objects/ZP_Payroll_Audit__c/fields/State_Added_At__c.field-meta.xml
<CustomField>
    <fullName>State_Added_At__c</fullName>
    <description>Date the new state was added, pulled from S3 file</description>
    <label>State Added At</label>
    <type>Date</type>
</CustomField>