unpackaged/main/default/objects/ZP_Payroll_Audit__c/fields/State_EIN__c.field-meta.xml
<CustomField>
    <fullName>State_EIN__c</fullName>
    <label>State EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>