unpackaged/main/default/objects/ZP_Payroll_Audit__c/fields/WC_Risk_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>WC_Risk_Class_Code__c</fullName>
    <label>WC Risk Class Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>